--- a/hasjob/static/sass/_header.sass
+++ b/hasjob/static/sass/_header.sass
@@ -132,24 +132,7 @@ header
   cursor: pointer
 
 .pay-filter-slider
-  margin: 5px auto
-
-.pay-filter-slider .noUi-horizontal .noUi-origin:first-child
-  margin-left: 15px
-
-.pay-filter-slider .noUi-horizontal .noUi-handle
-  width: 20px
-  height: 25px
-  left: -17px
-  top: -4px
-
-.pay-filter-slider .noUi-horizontal .noUi-handle:after, .pay-filter-slider .noUi-horizontal .noUi-handle:before 
-  height: 10px
-  left: 7px
-  top: 6px
-
-.pay-filter-slider .noUi-horizontal .noUi-handle:after
-  left: 12px
+  margin: 5px 15px
 
 .job-filter-location-search-clear
   cursor: pointer
